--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -38,11 +38,15 @@
         <action id="ClipCraftSwitchProfileAction" class="com.clipcraft.actions.ClipCraftSwitchProfileAction" text="Switch Profile" description="Switch among multiple ClipCraft profiles">
             <add-to-group group-id="ClipCraft.Submenu" anchor="last"/>
         </action>
-        <action id="OpenClipCraftSettings" class="com.intellij.ide.actions.ShowSettingsAction" text="Open ClipCraft Settings" description="Opens the ClipCraft settings page">
+        <action id="OpenClipCraftSettings"
+                class="com.intellij.ide.actions.ShowSettingsAction"
+                text="Open ClipCraft Settings"
+                description="Opens the ClipCraft settings page"
+                configurableId="clipcraft.settings">
             <add-to-group group-id="ClipCraft.Submenu" anchor="last"/>
         </action>
         <action id="ClipCraftAddSnippetFromCursorAction" class="com.clipcraft.actions.ClipCraftAddSnippetFromCursorOrSelectionAction" text="Add Snippet from Caret" description="Extract snippet from code near caret or selection">
-            <add-to-group group-id="ClipCraft.Submenu" anchor="last"/>
+            <add-to-group group-id="ClipCraft.Subme`nu" anchor="last"/>
         </action>
     </actions>
 </idea-plugin>
