--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,38 +11,38 @@ permissions:
   contents: "write"
   id-token: "write"
 jobs:
-  build:
-    runs-on: "ubuntu-latest"
-    steps:
-    - name: "Checkout Repository (Full History)"
-      uses: "actions/checkout@v3"
-      with:
-        fetch-depth: 0
-    - name: "Set up JDK 17"
-      uses: "actions/setup-java@v3"
-      with:
-        distribution: "temurin"
-        java-version: 17
-    - name: "Ensure gradlew is Executable"
-      run: "chmod +x ./gradlew"
-    - name: "Cache Gradle Directories"
-      uses: "actions/cache@v3"
-      with:
-        path: "~/.gradle/caches\n~/.gradle/wrapper\n.gradle\n"
-        key: "${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle/wrapper/gradle-wrapper.properties')\
-          \ }}"
-    - name: "Run Dependency Updates Check"
-      run: "./gradlew dependencyUpdates --no-daemon --stacktrace --parallel"
-    - name: "Run Quality Checks, Tests, and Build Plugin"
-      run: "./gradlew clean test buildPlugin patchPluginXml spotlessCheck detekt jacocoTestReport\
-        \ --no-daemon --stacktrace --parallel\n"
-    - name: "Upload Plugin Artifact"
-      uses: "actions/upload-artifact@v4"
-      with:
-        name: "plugin-distribution"
-        path: "build/distributions/*.zip"
+#  build:
+#    runs-on: "ubuntu-latest"
+#    steps:
+#    - name: "Checkout Repository (Full History)"
+#      uses: "actions/checkout@v3"
+#      with:
+#        fetch-depth: 0
+#    - name: "Set up JDK 17"
+#      uses: "actions/setup-java@v3"
+#      with:
+#        distribution: "temurin"
+#        java-version: 17
+#    - name: "Ensure gradlew is Executable"
+#      run: "chmod +x ./gradlew"
+#    - name: "Cache Gradle Directories"
+#      uses: "actions/cache@v3"
+#      with:
+#        path: "~/.gradle/caches\n~/.gradle/wrapper\n.gradle\n"
+#        key: "${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle/wrapper/gradle-wrapper.properties')\
+#          \ }}"
+#    - name: "Run Dependency Updates Check"
+#      run: "./gradlew dependencyUpdates --no-daemon --stacktrace --parallel"
+#    - name: "Run Quality Checks, Tests, and Build Plugin"
+#      run: "./gradlew clean test buildPlugin patchPluginXml spotlessCheck detekt jacocoTestReport\
+#        \ --no-daemon --stacktrace --parallel\n"
+#    - name: "Upload Plugin Artifact"
+#      uses: "actions/upload-artifact@v4"
+#      with:
+#        name: "plugin-distribution"
+#        path: "build/distributions/*.zip"
   release:
-    needs: "build"
+#    needs: "build"
     if: "github.event_name == 'push'"
     runs-on: "ubuntu-latest"
     steps:
