fix: refine CI workflow and update .gitignore
Adjusted naming conventions and improved clarity in publish.yml workflow steps for better readability. Updated .gitignore to simplify comments related to Gradle wrapper files.

--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ out/
 logs/
 coverage/
 
-# Allow Gradle wrapper files (do not ignore the wrapper jar and properties)
+# Allow Gradle wrapper files
 !gradle/wrapper/gradle-wrapper.jar
 !gradle/wrapper/gradle-wrapper.properties
 
