--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,21 +17,21 @@ jobs:
     if: "github.event_name == 'push'"
     runs-on: ubuntu-latest
     steps:
-      - name: "Checkout Repository (Full History)"
+      - name: "Checkout Full Repository History"
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - name: "Set up JDK 17"
+      - name: "Set up JDK 17 (Temurin)"
         uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: 17
 
-      - name: "Ensure gradlew is Executable"
+      - name: "Make gradlew Executable"
         run: chmod +x ./gradlew
 
-      - name: "Cache Gradle Directories"
+      - name: "Cache Gradle Dependencies"
         uses: actions/cache@v3
         with:
           path: |
@@ -40,24 +40,24 @@ jobs:
             .gradle
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle/wrapper/gradle-wrapper.properties') }}
 
-      - name: "Configure Git Remote for Tag Push"
+      - name: "Configure Git Remote for Authenticated Push"
         run: |
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
-          # Reset the remote URL to use the built-in GITHUB_TOKEN for authentication.
+          # Set remote URL to use GITHUB_TOKEN for push authentication.
           git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
 
-      - name: "Sync Repository with Remote"
+      - name: "Synchronize Repository with Remote"
         run: |
           git fetch --prune --tags
           git reset --hard origin/main
 
-      - name: "Clean Working Tree"
+      - name: "Clean Workspace"
         run: |
           git reset --hard
           git clean -fdx
 
-      - name: "Ensure gradlew is Executable (again)"
+      - name: "Recheck gradlew Executable Permission"
         shell: bash
         run: chmod +x ./gradlew
 
@@ -66,10 +66,10 @@ jobs:
         with:
           max_attempts: 3
           timeout_minutes: 5
-          command: >
-            bash -c "set -x; git add -A &&
-                     git commit -m 'Updates something' &&
-                     git push origin main &&
-                     ./gradlew release publishPlugin --no-daemon --stacktrace --parallel"
+          command: |
+            bash -c "set -x; \
+            git add -A && (git commit -m 'chore: update version files pre-release' || echo 'No changes to commit') && \
+            git push origin main && \
+            ./gradlew release publishPlugin --no-daemon --stacktrace --parallel"
         env:
           ORG_GRADLE_PROJECT_intellijPlatformPublishingToken: ${{ secrets.JB_PLUGIN_REPOSITORY_TOKEN }}
