--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,12 +8,20 @@ on:
   pull_request:
     branches:
       - "main"
-permissions:
-  contents: write
-  id-token: write
+  workflow_dispatch:
+    inputs:
+      release_only:
+        description: "Run only the release job (skip build, UI update, and comment)"
+        required: false
+        default: "false"
+      skip_extras:
+        description: "Skip UI update and post-release comment steps"
+        required: false
+        default: "false"
 
 jobs:
   build:
+    if: github.event_name != 'workflow_dispatch' || (github.event_name == 'workflow_dispatch' && github.event.inputs.release_only != 'true')
     runs-on: ubuntu-latest
     steps:
       - name: "Checkout Repository (Full History)"
@@ -46,7 +54,10 @@ jobs:
           path: build/distributions/*.zip
 
   release:
-    if: startsWith(github.ref, 'refs/tags/')
+    # Run release job if:
+    # - Triggered manually via workflow_dispatch, or
+    # - A tag push (ref starts with "refs/tags/")
+    if: github.event_name == 'workflow_dispatch' || startsWith(github.ref, 'refs/tags/')
     needs: build
     runs-on: ubuntu-latest
     steps:
@@ -107,11 +118,13 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   update-ui:
-    if: startsWith(github.ref, 'refs/tags/')
+    if: (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')) ||
+      (github.event_name == 'workflow_dispatch' && github.event.inputs.skip_extras != 'true' && github.event.inputs.release_only != 'true')
     needs: release
     runs-on: ubuntu-latest
     steps:
       - name: "Update Repository Topics and Description"
+        continue-on-error: true
         uses: actions/github-script@v6
         with:
           script: |
@@ -128,11 +141,13 @@ jobs:
             });
 
   post-release-comment:
-    if: startsWith(github.ref, 'refs/tags/')
+    if: (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')) ||
+      (github.event_name == 'workflow_dispatch' && github.event.inputs.skip_extras != 'true' && github.event.inputs.release_only != 'true')
     needs: release
     runs-on: ubuntu-latest
     steps:
       - name: "Post Release Announcement Comment"
+        continue-on-error: true
         uses: peter-evans/create-or-update-comment@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
